change page title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="tgn-registrations" ng-controller="RegistrationsCtrl">
   <head>
-    <title>Transgendergroep Nijmegen Registraties</title>
+    <title>Transgendergroep Nijmegen Inschrijvingen</title>
     <link rel="stylesheet" href="lib/bootstrap.css" />
     <link rel="stylesheet" href="lib/bootstrap-toggle.css" />
     <!-- <link rel="stylesheet" href="style.css" /> -->
