make svg inline

--- a/index.html
+++ b/index.html
@@ -167,9 +167,13 @@
               role="tab"
             >
               Uitloggen
-              <svg class="bi" width="16" height="16">
-                <use
+              <svg class="bi" width="16" height="16" fill="currentColor">
+                <!-- <use
                   xlink:href="lib/bootstrap-icons.svg#arrow-right-square-fill"
+                /> -->
+                <path
+                  fill-rule="evenodd"
+                  d="M2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2zm2.5 8.5a.5.5 0 010-1h5.793L8.146 5.354a.5.5 0 11.708-.708l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L10.293 8.5H4.5z"
                 />
               </svg>
             </a>
@@ -635,9 +639,18 @@
                           href=""
                           ng-click="set_user_event_status(uid, selected_event, null)"
                         >
-                          <svg class="bi text-danger" width="16" height="16">
-                            <use
+                          <svg
+                            class="bi text-danger"
+                            width="16"
+                            height="16"
+                            fill="currentColor"
+                          >
+                            <!-- <use
                               xlink:href="lib/bootstrap-icons.svg#x-square-fill"
+                            /> -->
+                            <path
+                              fill-rule="evenodd"
+                              d="M2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2zm3.354 4.646a.5.5 0 10-.708.708L7.293 8l-2.647 2.646a.5.5 0 00.708.708L8 8.707l2.646 2.647a.5.5 0 00.708-.708L8.707 8l2.647-2.646a.5.5 0 00-.708-.708L8 7.293 5.354 4.646z"
                             />
                           </svg>
                         </a>
@@ -697,9 +710,18 @@
                           href=""
                           ng-click="set_user_event_status(selected_user.$id, event, null)"
                         >
-                          <svg class="bi text-danger" width="16" height="16">
-                            <use
+                          <svg
+                            class="bi text-danger"
+                            width="16"
+                            height="16"
+                            fill="currentColor"
+                          >
+                            <!-- <use
                               xlink:href="lib/bootstrap-icons.svg#x-square-fill"
+                            /> -->
+                            <path
+                              fill-rule="evenodd"
+                              d="M2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2zm3.354 4.646a.5.5 0 10-.708.708L7.293 8l-2.647 2.646a.5.5 0 00.708.708L8 8.707l2.646 2.647a.5.5 0 00.708-.708L8.707 8l2.647-2.646a.5.5 0 00-.708-.708L8 7.293 5.354 4.646z"
                             />
                           </svg>
                         </a>
