attempt fix non-loading controller on some browsers

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="tgn-registrations" ng-controller="RegistrationsCtrl">
+<html ng-cloak ng-app="tgn-registrations" ng-controller="RegistrationsCtrl">
   <head>
     <title>Transgendergroep Nijmegen Inschrijvingen</title>
     <link rel="stylesheet" href="lib/bootstrap.css" />
@@ -33,7 +33,7 @@
     <script src="app.js"></script>
   </head>
 
-  <body ng-cloak class="text-justify">
+  <body class="text-justify">
     <!-- <div class="alert alert-info text-center" role="alert">
       Op deze pagina kun je je inschrijven voor de activiteiten van de
       Transgendergroep Nijmegen. Bezoek
