make toast position fixed

--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@
     <div
       class="toast"
       style="
-        position: absolute;
+        position: fixed;
         margin-left: auto;
         margin-right: auto;
         left: 0;
