fix button background color

--- a/index.html
+++ b/index.html
@@ -425,6 +425,7 @@
                 <button
                   type="button"
                   class="btn btn-warning w-100 h-100"
+                  style="background-color: #ffc107 !important"
                   ng-click="forgotpassword(form)"
                 >
                   Wachtwoord vergeten?
