fix red buttons

--- a/index.html
+++ b/index.html
@@ -578,6 +578,7 @@
                   form="deleteAccountForm"
                   value="Account verwijderen"
                   class="btn btn-danger w-100 h-100"
+                  style="background-color: #dc3545 !important"
                   ng-click="deleteaccount(form)"
                   ng-disabled="working || deleteAccountForm.$invalid"
                 />
@@ -948,6 +949,7 @@
                 <button
                   type="button"
                   class="btn btn-danger w-100 h-100"
+                  style="background-color: #dc3545 !important"
                   ng-click="deleteevent(selected_event)"
                 >
                   Activiteit verwijderen
