--- a/index.html
+++ b/index.html
@@ -220,9 +220,10 @@
                   >
                     <td>{{event.date | date:"dd/MM/yyyy"}}</td>
                     <td>
-                      <a href="{{event.link}}" target="_blank"
+                      <a ng-if="event.link" href="{{event.link}}" target="_blank"
                         >{{event.name}}</a
                       >
+                      <span ng-if="!event.link">{{event.name}}</span>
                     </td>
                     <td>
                       <div ng-if="event.no_registrations">
