--- a/index.html
+++ b/index.html
@@ -34,17 +34,22 @@
       algemene informatie.
     </div> -->
 
-    <div
-      ng-if="user && user.emailVerified"
-      class="alert alert-info"
-      role="alert"
-    >
-      Ingelogd als <b>{{userInfo.name}}</b>.
-    </div>
+    <div class="alert alert-info" role="alert">
+      <span
+        class="my-0" 
+        ng-if="user && user.emailVerified"
+      >
+        Ingelogd als <b>{{userInfo.name}}</b>.
+      </span>
 
-    <div ng-if="!user" class="alert alert-info" role="alert">
-      Registreer een account of log in om je in te kunnen schrijven voor
-      activiteiten.
+      <span ng-if="!user">
+        Registreer een account of log in om je in te kunnen schrijven voor
+        activiteiten.
+      </span>
+
+      <span>
+        De inschrijvingen sluiten &eacute&eacuten uur voor aanvang van een activiteit.
+      </span>
     </div>
 
     <div class="card">
@@ -215,7 +220,7 @@
                 <tbody>
                   <tr
                     ng-repeat="event in events | orderBy:'date'"
-                    ng-if="event.date > now && !event.invisible"
+                    ng-if="now < event.date + EVENT_GRACE && !event.invisible"
                     ng-class="{'table-info': event.signups[user.uid]}"
                   >
                     <td>{{event.date | date:"dd/MM/yyyy"}}</td>
@@ -233,7 +238,7 @@
                         <div class="col-auto pr-1">
                           <span
                             class="badge badge"
-                            ng-class="count_event_signups(event) < event.capacity ? 'badge-primary' : 'badge-secondary'"
+                            ng-class="count_event_signups(event) < event.capacity && now < event.date - EVENT_GRACE ? 'badge-primary' : 'badge-secondary'"
                             style="width: 5em; float: right; text-align: center"
                             >{{count_event_signups(event)}}/{{event.capacity}}</span
                           >
@@ -242,7 +247,7 @@
                           <div class="progress">
                             <div
                               class="progress-bar"
-                              ng-class="count_event_signups(event) < event.capacity ? 'bg-primary' : 'bg-secondary'"
+                              ng-class="count_event_signups(event) < event.capacity && now < event.date - EVENT_GRACE ? 'bg-primary' : 'bg-secondary'"
                               role="progressbar"
                               ng-style="{width: (count_event_signups(event) / event.capacity * 100) + '%' }"
                             ></div>
@@ -264,7 +269,7 @@
                           id="customSwitch_{{event.$id}}"
                           ng-model="event.signups[user.uid]"
                           ng-click="set_user_event_status(user.uid, event, $event.target.checked ? true : null)"
-                          ng-disabled="count_event_signups(event) >= event.capacity && !event.signups[user.uid]"
+                          ng-disabled="now >= event.date - EVENT_GRACE || count_event_signups(event) >= event.capacity && !event.signups[user.uid]"
                         />
                         <label
                           class="custom-control-label"
