Add fake signups to admin forms

--- a/index.html
+++ b/index.html
@@ -806,6 +806,17 @@
                 </div>
               </div>
               <div class="row form-group">
+                <label class="col col-form-label">Nepinschrijvingen</label>
+                <div class="col">
+                  <input
+                    type="number"
+                    pattern="-?\d*"
+                    class="form-control"
+                    ng-model="form.fake_signups"
+                  />
+                </div>
+              </div>
+              <div class="row form-group">
                 <label class="col col-form-label">Geen inschrijvingen</label>
                 <div class="col">
                   <input
@@ -905,6 +916,17 @@
                     />
                   </div>
                 </div>
+              <div class="row form-group">
+                <label class="col col-form-label">Nepinschrijvingen</label>
+                <div class="col">
+                  <input
+                    type="number"
+                    pattern="-?\d*"
+                    class="form-control"
+                    ng-model="edit_event.fake_signups"
+                  />
+                </div>
+              </div>
                 <div class="row form-group">
                   <label class="col col-form-label">Geen inschrijvingen</label>
                   <div class="col">
